// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom compressor 1`] = `
Object {
  "descriptor": Object {
    "adapter": Object {
      "name": "test-adapter",
      "version": "7.7.7",
    },
    "author": Object {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Statoscope extension for collecting compressed resource sizes",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-extension-compressed",
    "version": "8.8.8",
  },
  "payload": Object {
    "compilations": Array [
      Object {
        "id": "foo-compilation",
        "resources": Array [
          Object {
            "id": "foo-resource",
            "size": Object {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          Object {
            "id": "bar-resource",
            "size": Object {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
      Object {
        "id": "bar-compilation",
        "resources": Array [
          Object {
            "id": "foo-resource",
            "size": Object {
              "compressor": Object {
                "name": "custom-compressor",
                "version": "7.7.7",
              },
              "size": 100,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`custom compressor 2`] = `
Object {
  "calls": Array [
    Array [
      "foo-foo-content",
      "foo-resource",
      undefined,
    ],
    Array [
      "foo-bar-content",
      "bar-resource",
      undefined,
    ],
  ],
  "instances": Array [
    Object {
      "compressor": [MockFunction] {
        "calls": Array [
          Array [
            "foo-foo-content",
            "foo-resource",
            undefined,
          ],
          Array [
            "foo-bar-content",
            "bar-resource",
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
    },
    Object {
      "compressor": [MockFunction] {
        "calls": Array [
          Array [
            "foo-foo-content",
            "foo-resource",
            undefined,
          ],
          Array [
            "foo-bar-content",
            "bar-resource",
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "compressor": "custom-compressor",
              "size": 100,
            },
          },
        ],
      },
    },
  ],
  "invocationCallOrder": Array [
    1,
    2,
  ],
  "lastCall": Array [
    "foo-bar-content",
    "bar-resource",
    undefined,
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "compressor": "custom-compressor",
        "size": 100,
      },
    },
    Object {
      "type": "return",
      "value": Object {
        "compressor": "custom-compressor",
        "size": 100,
      },
    },
  ],
}
`;

exports[`custom compressor 3`] = `
Object {
  "calls": Array [
    Array [
      "bar-foo-content",
      "foo-resource",
      undefined,
    ],
  ],
  "instances": Array [
    Object {
      "compressor": [MockFunction] {
        "calls": Array [
          Array [
            "bar-foo-content",
            "foo-resource",
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "compressor": Object {
                "name": "custom-compressor",
                "version": "7.7.7",
              },
              "size": 100,
            },
          },
        ],
      },
    },
  ],
  "invocationCallOrder": Array [
    3,
  ],
  "lastCall": Array [
    "bar-foo-content",
    "foo-resource",
    undefined,
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Object {
        "compressor": Object {
          "name": "custom-compressor",
          "version": "7.7.7",
        },
        "size": 100,
      },
    },
  ],
}
`;

exports[`preset compressor gzip 1`] = `
Object {
  "descriptor": Object {
    "adapter": Object {
      "name": "test-adapter",
      "version": "7.7.7",
    },
    "author": Object {
      "name": "Sergey Melyukov",
      "url": "https://twitter.com/smelukov",
    },
    "description": "Statoscope extension for collecting compressed resource sizes",
    "homepage": "https://github.com/statoscope/statoscope/",
    "name": "@statoscope/stats-extension-compressed",
    "version": "8.8.8",
  },
  "payload": Object {
    "compilations": Array [
      Object {
        "id": "foo-compilation",
        "resources": Array [
          Object {
            "id": "foo-resource",
            "size": Object {
              "compressor": "gzip",
              "meta": Object {
                "level": 6,
              },
              "size": 33,
            },
          },
          Object {
            "id": "bar-resource",
            "size": Object {
              "compressor": "gzip",
              "meta": Object {
                "level": 6,
              },
              "size": 38,
            },
          },
        ],
      },
      Object {
        "id": "bar-compilation",
        "resources": Array [
          Object {
            "id": "foo-resource",
            "size": Object {
              "compressor": "gzip",
              "meta": Object {
                "level": 6,
              },
              "size": 48,
            },
          },
          Object {
            "id": "bar-resource",
            "size": Object {
              "compressor": "gzip",
              "meta": Object {
                "level": 6,
              },
              "size": 51,
            },
          },
        ],
      },
    ],
  },
}
`;
